--- a/style.css
+++ b/style.css
@@ -74,3 +74,12 @@
   transition: opacity 0.3s ease;
 }
 
+#inventory {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 4px;
+  background: rgba(0, 0, 0, 0.5);
+  font-family: monospace;
+}
+
